Merge branch 'master' of github.com:gchq/stroom into gh-787-merged
# Conflicts:
#	CHANGELOG.md
#	build.gradle
#	stroom-app/src/main/java/stroom/startup/App.java
#	stroom-core-server/src/main/java/stroom/properties/DefaultProperties.java
#	stroom-core-server/src/test/java/stroom/properties/MockStroomPropertyService.java
#	stroom-integrationtest/src/integrationTest/java/stroom/refdata/TestReferenceDataWithCache.java
#	stroom-pipeline/build.gradle
#	stroom-pipeline/src/main/java/stroom/pipeline/PipelineModule.java
#	stroom-pipeline/src/main/java/stroom/pipeline/factory/FactoryModule.java
#	stroom-pipeline/src/main/java/stroom/pipeline/filter/ReferenceDataFilter.java
#	stroom-pipeline/src/main/java/stroom/refdata/ContextDataLoadTask.java
#	stroom-pipeline/src/main/java/stroom/refdata/ContextDataLoadTaskHandler.java
#	stroom-pipeline/src/main/java/stroom/refdata/ContextDataLoader.java
#	stroom-pipeline/src/main/java/stroom/refdata/ContextDataLoaderImpl.java
#	stroom-pipeline/src/main/java/stroom/refdata/ReferenceData.java
#	stroom-pipeline/src/main/java/stroom/refdata/ReferenceDataLoadTask.java
#	stroom-pipeline/src/main/java/stroom/refdata/ReferenceDataLoadTaskHandler.java
#	stroom-pipeline/src/main/java/stroom/refdata/ReferenceDataModule.java
#	stroom-pipeline/src/test/java/stroom/refdata/TestMapStoreCache.java
#	stroom-pipeline/src/test/java/stroom/refdata/TestReferenceData.java